Add 2 new dbus methods for setting tab title formats so that they are persistent. Thanks to Andrea Solis for original patch.

FIXED_IN: 4.5
BUG: 183963

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1136726